Moved the player routes to OpenAPI spec
